--- a/lab/lab1/lab1.html
+++ b/lab/lab1/lab1.html
@@ -8,3 +8,7 @@
 <!--This is a comment-->
 </body>
 </html>
+<h3>Map of UNC-Charlotte</h3>
+<img
+src="https://maps.googleapis.com/maps/api/staticmap?center=UNCC,Charlotte,N
+C&zoom=14&scale=1&size=512x512&maptype=hybrid&sensor=false&key=AIzaSyDHPYoySu2Km0SNNsqXUGvvS5t8CjHiy6w" alt="Google Map">
