--- a/lab/lab1/lab1.html
+++ b/lab/lab1/lab1.html
@@ -12,6 +12,36 @@
 <img
 src="https://maps.googleapis.com/maps/api/staticmap?center=35.3072950431651,-80.73019339389833&zoom=15&scale=1&size=512x512&maptype=hybrid&sensor=false&key=AIzaSyDHPYoySu2Km0SNNsqXUGvvS5t8CjHiy6w" alt="Google Map">
 
+</body>
+</html>
+<h3>Map of Mochitlan, Guerrero, Mexico</h3>
+<img
+src="https://maps.googleapis.com/maps/api/staticmap?center=17.472315593528602, -99.36953615782632&zoom=15&scale=1&size=512x512&maptype=hybrid&sensor=false&key=AIzaSyDHPYoySu2Km0SNNsqXUGvvS5t8CjHiy6w" alt="Google Map">
 
 
+</body>
+</html>
+<h3>Map of Colotlipa Guerrero, Mexico</h3>
+<img
+src="https://maps.googleapis.com/maps/api/staticmap?center=17.41108146197036, -99.16586494984821&zoom=15&scale=1&size=512x512&maptype=hybrid&sensor=false&key=AIzaSyDHPYoySu2Km0SNNsqXUGvvS5t8CjHiy6w" alt="Google Map">
 
+
+</body>
+</html>
+<h3>Map of Chilpancingo, Guerrero, Mexico</h3>
+<img
+src="https://maps.googleapis.com/maps/api/staticmap?center=17.550760977512827, -99.4998049536487&zoom=15&scale=1&size=512x512&maptype=hybrid&sensor=false&key=AIzaSyDHPYoySu2Km0SNNsqXUGvvS5t8CjHiy6w" alt="Google Map">
+
+
+</body>
+</html>
+<h3>Map of Acapulco, Guerrero, Mexico</h3>
+<img
+src="https://maps.googleapis.com/maps/api/staticmap?center=16.864213041139458, -99.87951933197299&zoom=15&scale=1&size=512x512&maptype=hybrid&sensor=false&key=AIzaSyDHPYoySu2Km0SNNsqXUGvvS5t8CjHiy6w" alt="Google Map">
+
+
+</body>
+</html>
+<h3>Map of El Borbollon en Quechultenango, Guerrero, Mexico</h3>
+<img
+src="https://maps.googleapis.com/maps/api/staticmap?center=17.412395592556653, -99.21618890356673&zoom=15&scale=1&size=512x512&maptype=hybrid&sensor=false&key=AIzaSyDHPYoySu2Km0SNNsqXUGvvS5t8CjHiy6w" alt="Google Map">
