--- a/lab/lab1/lab1.html
+++ b/lab/lab1/lab1.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-<title>Lab X for Web GIS</title>
+<title>Lab 1 for Web GIS</title>
 </head>
 <body>
-<h1>Lab X for Web GIS</h1>
-<h3>Name: YOUR NAME HERE</h3>
+<h1>Lab 1 for Web GIS</h1>
+<h3>Name: Becc Hernandez-Lopez</h3>
 <!--This is a comment-->
 </body>
 </html>
@@ -45,6 +45,7 @@ src="https://maps.googleapis.com/maps/api/staticmap?center=16.864213041139458, -
 <h3>Map of El Borbollon en Quechultenango, Guerrero, Mexico</h3>
 <img
 src="https://maps.googleapis.com/maps/api/staticmap?center=17.412395592556653, -99.21618890356673&zoom=18&scale=1&size=512x512&maptype=hybrid&sensor=false&key=AIzaSyDHPYoySu2Km0SNNsqXUGvvS5t8CjHiy6w" alt="Google Map">
+
 
 
 
