--- a/lab/lab2/lab2.html
+++ b/lab/lab2/lab2.html
@@ -18,3 +18,28 @@ document.write(Math.random());
 </body>
 </html>
 
+<h3>Define variables and perform calculation: </h3>
+<script type="text/javascript">
+var str1="Hello World";
+document.write(str1);
+var x=5;
+document.write(x);
+document.write("<br> ");
+var y=10;
+var z=x+y;
+document.write(z);
+document.write("<br> ");
+</script>
+
+<h3>Define a function </h3>
+<script type="text/javascript">
+function sum3(x1,x2,x3)
+{
+var sum=x1+x2+x3;
+return sum;
+}
+var k=sum3(5,6,7);
+document.write(k);
+</script>
+</body>
+</html>
