--- a/lab/lab2/lab2.html
+++ b/lab/lab2/lab2.html
@@ -1,12 +1,11 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Lab 2 for Web GIS</title>
-
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Lab 2 for Web GIS</title>
 <style>
 html { height:100% }
-body { height:100%; margin:0; padding:0 }
+<body onload="initialize( <div id="map_canvas" style="width:50%; height:50%"></div> )
 #map_canvas { height:60vh; width:100% }
 </style>
 <script
