--- a/lab/lab2/lab2.html
+++ b/lab/lab2/lab2.html
@@ -5,7 +5,7 @@
 <title>Lab 2 for Web GIS</title>
 <style>
 html { height:100% }
-<body onload="initialize( <div id="map_canvas" style="width:50%; height:50%"></div> )
+body { height:100%; margin:0; padding:0 }
 #map_canvas { height:60vh; width:100% }
 </style>
 <script
@@ -26,7 +26,7 @@ myOptions);
 </script>
 
 </head>
-<body>
+<body onload="initialize()">
 <h1>Lab 2 for Web GIS</h1>
 <h3>Name: YOUR NAME HERE</h3>
 <!-- Comments-->
