--- a/lab/lab2/lab2.html
+++ b/lab/lab2/lab2.html
@@ -63,6 +63,7 @@ return sum;
 }
 var k=sum3(5,6,7);
 document.write(k);
+<div id="map_canvas" style="width:50%; height:50%"></div>
 </script>
 </body>
 </html>
