--- a/lab/lab2/lab2.html
+++ b/lab/lab2/lab2.html
@@ -6,14 +6,14 @@
 <style>
 html { height:100% }
 body { height:100%; margin:0; padding:0 }
-#map_canvas { height:60vh; width:100% }
+#map_canvas { height:50vh; width:50% }
 </style>
 <script
+function initialize() {
 src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDHPYoySu2Km0SNNsqXUGvvS5t8CjHiy6w">
 </script>
 <script>
 function initialize()
-{
 var latlng = new google.maps.LatLng(35.306840, -80.73200);
 var myOptions = {
 zoom: 16,
@@ -28,7 +28,7 @@ myOptions);
 </head>
 <body onload="initialize()">
 <h1>Lab 2 for Web GIS</h1>
-<h3>Name: YOUR NAME HERE</h3>
+<h3>Name: Becc Hernandez</h3>
 <!-- Comments-->
 <h3>Current Date is: </h3>
 <script type="text/javascript">
@@ -38,8 +38,6 @@ document.write(Date());
 <script type="text/javascript">
 document.write(Math.random());
 </script>
-</body>
-</html>
 
 <h3>Define variables and perform calculation: </h3>
 <script type="text/javascript">
