--- a/lab/lab2/lab2.html
+++ b/lab/lab2/lab2.html
@@ -1,39 +1,18 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Lab 2 for Web GIS</title>
-<style>
-html { height:100% }
-body { height:100%; margin:0; padding:0 }
-#map_canvas { height:50vh; width:50% }
-</style>
-<script
-function initialize() {
-src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDHPYoySu2Km0SNNsqXUGvvS5t8CjHiy6w">
-</script>
-<script>
-function initialize()
-var latlng = new google.maps.LatLng(35.306840, -80.73200);
-var myOptions = {
-zoom: 16,
-center: latlng,
-mapTypeId: google.maps.MapTypeId.HYBRID
-};
-new google.maps.Map(document.getElementById("map_canvas"),
-myOptions);
-}
-</script>
-
 </head>
-<body onload="initialize()">
+<body>
 <h1>Lab 2 for Web GIS</h1>
-<h3>Name: Becc Hernandez</h3>
-<!-- Comments-->
+<h3>Name: YOUR NAME HERE</h3>
+<!-- Comments→
+
 <h3>Current Date is: </h3>
 <script type="text/javascript">
 document.write(Date());
 </script>
+
 <h3>Generate a random number: </h3>
 <script type="text/javascript">
 document.write(Math.random());
@@ -61,7 +40,31 @@ return sum;
 }
 var k=sum3(5,6,7);
 document.write(k);
-<div id="map_canvas" style="width:50%; height:50%"></div>
 </script>
+
 </body>
 </html>
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+html { height:100% }
+body { height:100%; margin:0; padding:0 }
+#map_canvas { height:60vh; width:100% }
+</style>
+<script
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDHPYoySu2Km0SNNsqXUGvvS5t8CjHiy6w">
+</script>
+<script>
+function initialize()
+{
+var latlng = new google.maps.LatLng(35.306840, -80.73200);
+var myOptions = {
+zoom: 16,
+center: latlng,
+mapTypeId: google.maps.MapTypeId.HYBRID
+};
+new google.maps.Map(document.getElementById("map_canvas"),
+myOptions);
+}
+</script>
+
