--- a/lab/lab2/lab2.html
+++ b/lab/lab2/lab2.html
@@ -28,7 +28,7 @@ myOptions);
 </head>
 <body onload="initialize()">
 <h1>Lab 2 for Web GIS</h1>
-<h3>Name: Becc Hernandez</h3>
+<h3>Name: Becc Hernandez-Lopez</h3>
 <!-- Comments-->
 <h3>Current Date is: </h3>
 <script type="text/javascript">
