--- a/lab/lab2/lab2.html
+++ b/lab/lab2/lab2.html
@@ -9,11 +9,13 @@ body { height:100%; margin:0; padding:0 }
 #map_canvas { height:50vh; width:50% }
 </style>
 <script
-function initialize() {
-src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDHPYoySu2Km0SNNsqXUGvvS5t8CjHiy6w">
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDHPYoySu2Km0SNNsqXUGvvS5t8CjHiy6w">
 </script>
+<h3>Interactive Map (Google Maps)</h3>
+<div id="map_canvas" style="width:50%; height:50%"></div>
 <script>
 function initialize()
+{
 var latlng = new google.maps.LatLng(35.306840, -80.73200);
 var myOptions = {
 zoom: 16,
