--- a/lab/lab2/lab2.html
+++ b/lab/lab2/lab2.html
@@ -74,7 +74,7 @@ document.write("sum3(10,20,30)="+sum3(10,20,30));
 </script>
 
 <h3>Interactive Map (Google Maps)</h3>
-<div id="map_canvas" style="width:50%; height:50%; margin:0 auto""></div>
+<div id="map1" style="width:50%; height:50%; margin:0 auto"></div>
 
 </body>
 </html>
