--- a/lab/lab2/lab2.html
+++ b/lab/lab2/lab2.html
@@ -103,5 +103,11 @@ document.write("sum3(10,20,30)="+sum3(10,20,30));
         
 <div id="map2" style="width:50%; height:50%; margin:1 auto"></div>
 
+<div id="map3" style="width:50%; height:50%; margin:1 auto"></div>
+
+<div id="map4" style="width:50%; height:50%; margin:1 auto"></div>
+
+<div id="map5" style="width:50%; height:50%; margin:1 auto"></div>
+
 </body>
 </html>
