--- a/lab/lab3/lab3.html
+++ b/lab/lab3/lab3.html
@@ -11,7 +11,7 @@
 
 <body>
   <h3>Lab3: Web-based Mapping Using OpenLayers</h3>
-  <h4>Author: Jiaxin Liu</h4>
+  <h4>Author: Becc Hernandez-Lopez</h4>
   <div id="map" class="map" style="width:800px; height:600px"></div>
   
 <script>
@@ -24,9 +24,7 @@
 });
   
 // Azure Maps Road
-  var AZURE_KEY =
-'6srLl2o3dGC8xAqJVrOEtVGTFj1ujl40lKOoKJD6f1K3XLS2U5JAJQQJ99BIACYeBjF
-Z86DdAAAgAZMP4fGn'; // Key must be on the same line! No line breaks/spaces
+  var AZURE_KEY =2HAB9V6or8faKVPMhODhNtOU82B7dlD5RPILwQ7w3qWwPP6UqsXjJQQJ99BJACYeBjFboJHtAAAgAZMPfQYp; 
   var azureRoad = new ol.layer.Tile({
     title: 'Azure Maps (Road)',
     type: 'base',
